add new flight functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,6 @@
 <% include('./partials/header') %>
+
+  <na>
+    <a href="/flights/new">Book a Flight</a>
+  </na>
   <% include('./partials/footer') %>
