add create functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <% include('./partials/header') %>
 
-  <na>
+  <nav>
+    <a href="/flights">All Flights</a>
     <a href="/flights/new">Book a Flight</a>
-  </na>
+  </nav>
+  <h2>Home Page</h2>
   <% include('./partials/footer') %>
