--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,4 +1,4 @@
-<!-- <%- include('../partials/header') %>
+<%- include('../partials/header') %>
 
     <h2>Flights List</h2>
     <table>
@@ -32,4 +32,4 @@
     </table>
 
 
-    <%- include('../partials/footer') %> -->
+    <%- include('../partials/footer') %>
