fix bug, now it actually creates a new flight

--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -10,11 +10,11 @@
         </label><br>
         <label>Airport:
             <select name="airport">
-                <option value="'AUS">AUS</option>
-                <option value="'DFW">DFW</option>
-                <option value="'DEN">DEN</option>
-                <option value="'LAX">LAX</option>
-                <option value="'SAN">SAN</option>
+                <option value="AUS">AUS</option>
+                <option value="DFW">DFW</option>
+                <option value="DEN">DEN</option>
+                <option value="LAX">LAX</option>
+                <option value="SAN">SAN</option>
             </select>
         </label><br>
         <label>Flight Number:
