--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -25,7 +25,9 @@
                     <td>
                         <%= f.departs %>
                     </td>
-
+                    <td>
+                        <a href="/flights/<%=f._id %>">Details</a>
+                    </td>
                 </tr>
                 <% }) %>
         </tbody>
